<resources>
    <string name="app_name">User Profile Kotlin</string>
    <string name="name">%1$s %2$s</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="profile_description">Desciption</string>
    <string name="open_picture_gallery">Open Picture Gallery</string>
    <string name="submit_confirm">Confirm</string>
</resources>
